@@ -137,13 +137,13 @@ class ActivationView(BaseActivationView):
         """
         activation_key = kwargs.get('activation_key', '')
         site = get_current_site(self.request)
-        activated_user = (self.registration_profile.objects
-                          .activate_user(activation_key, site))
-        if activated_user:
+        user, activated = self.registration_profile.objects.activate_user(
+            activation_key, site)
+        if activated:
             signals.user_activated.send(sender=self.__class__,
-                                        user=activated_user,
+                                        user=user,
                                         request=self.request)
-        return activated_user
+        return user
 
     def get_success_url(self, user):
         return ('registration_activation_complete', (), {})
